--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,9 +1,9 @@
 
 .footer {
-    background-color: #f1f1f1;
-    padding: 1rem;
-    text-align: center;
-    color: #333;
-    font-size: 0.9rem;
-  }
-  
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 1rem;
+  text-align: center;
+  color: #333;
+  font-size: 0.9rem;
+}
