--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,14 +1,70 @@
+/* 
 .header {
-    background-color: #c0cbd6;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  width: 100%;
+  background-color: #461a99; 
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly; 
+  padding: 10px 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+/* Style the logo */
+/* .logo {
+  height: 150px; 
+  width: auto;
+} */
+
+/* Style the title */
+/* .app-title {
+  font-size: 44px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+} */
+
+/* Responsive Design */
+/* @media (max-width: 768px) {
+  .header {
+      flex-direction: row; /* Ensures items stay in a row */
+      /* padding: 15px;
+      text-align: center;
   }
 
 
+} */ 
+
+
+
+.header {
+  width: 100%;
+  background-color: #461a99; 
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly; 
+  border: #255b92 2px solid;
+  border-radius: 10px;
+  padding: 10px 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+
 .app-title {
-   
+   background-color: #255b92;
+   border: #255b92 2px solid;
+    border-radius: 10px;
+    padding: 3% 30px;
     text-align: center; 
     font-size: 3rem;
     font-family: "Slabo 27px", serif;
@@ -27,4 +83,4 @@
     box-shadow: 2px 4px 6px grey;
    
   }
-  
+   
